force-app/main/default/objects/OpponentMatch__c/OpponentMatch__c.object-meta.xml
<CustomObject>
    <description>Historique des matchs de l&apos;adversaire avec indicateurs tactiques/perf.</description>
    <label>Opponent Match</label>
    <nameField>
        <displayFormat>OM-{00000}</displayFormat>
        <label>Opponent Match Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opponent Matches</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>