force-app/main/default/objects/OpponentMatch__c/fields/ExternalMatchId__c.field-meta.xml
<CustomField>
    <fullName>ExternalMatchId__c</fullName>
    <externalId>true</externalId>
    <label>External Match ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>