force-app/main/default/objects/OpponentMatch__c/fields/GoalsAgainst__c.field-meta.xml
<CustomField>
    <fullName>GoalsAgainst__c</fullName>
    <label>Goals Against</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>