force-app/main/default/objects/OpponentMatch__c/fields/GoalsFor__c.field-meta.xml
<CustomField>
    <fullName>GoalsFor__c</fullName>
    <label>Goals For</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>