force-app/main/default/objects/OpponentMatch__c/fields/HomeAway__c.field-meta.xml
<CustomField>
    <fullName>HomeAway__c</fullName>
    <label>Home Away</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
                <default>true</default>
                <label>Home</label>
            </value>
            <value>
                <fullName>Away</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>