force-app/main/default/objects/OpponentMatch__c/fields/Opponent__c.field-meta.xml
<CustomField>
    <fullName>Opponent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opponent</label>
    <referenceTo>Opponent__c</referenceTo>
    <relationshipLabel>Opponent Matches</relationshipLabel>
    <relationshipName>OpponentMatches</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>