force-app/main/default/objects/OpponentMatch__c/fields/Possession__c.field-meta.xml
<CustomField>
    <fullName>Possession__c</fullName>
    <label>Possession</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>