force-app/main/default/objects/OpponentMatch__c/fields/PPDA__c.field-meta.xml
<CustomField>
    <fullName>PPDA__c</fullName>
    <label>PPDA</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>