force-app/main/default/objects/OpponentMatch__c/fields/xGAgainst__c.field-meta.xml
<CustomField>
    <fullName>xGAgainst__c</fullName>
    <label>xG Against</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>