force-app/main/default/objects/OpponentMatch__c/fields/xGFor__c.field-meta.xml
<CustomField>
    <fullName>xGFor__c</fullName>
    <label>xG For</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>