force-app/main/default/objects/OpponentMatch__c/validationRules/NonNegativePPDA.validationRule-meta.xml
<ValidationRule>
    <fullName>NonNegativePPDA</fullName>
    <active>true</active>
    <errorConditionFormula>PPDA__c &lt; 0</errorConditionFormula>
    <errorMessage>PPDA cannot be negative.</errorMessage>
</ValidationRule>