force-app/main/default/objects/OpponentMatch__c/validationRules/NonNegativeScores.validationRule-meta.xml
<ValidationRule>
    <fullName>NonNegativeScores</fullName>
    <active>true</active>
    <errorConditionFormula>OR(GoalsFor__c &lt; 0, GoalsAgainst__c &lt; 0)</errorConditionFormula>
    <errorMessage>Goals cannot be negative.</errorMessage>
</ValidationRule>