force-app/main/default/objects/OpponentMatch__c/validationRules/PossessionMax100.validationRule-meta.xml
<ValidationRule>
    <fullName>PossessionMax100</fullName>
    <active>true</active>
    <errorConditionFormula>Possession__c &gt; 100</errorConditionFormula>
    <errorMessage>Possession cannot exceed 100.</errorMessage>
</ValidationRule>